typescript/checker/tests/conformance/decorators/invalid/decoratorOnVar.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/invalid/decoratorOnVar.ts:3:1
  |
3 | @dec
  | ^

